--- a/pages/bio.html
+++ b/pages/bio.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Biografia Darth Veider</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <img src="./imagens/capa.jpg" alt="">
+        </header>
+
+        <nav class="nav">
+            <a class="nav-link" href="./index.html">HOME</a>
+            <a class="nav-link" href="./pages/bio.html">BIOGRAFIA</a>
+            <a class="nav-link" href="./pages/camopublica.html">CAMPANHAS PUBLICITARIAS</a>
+            <a class="nav-link" href="./pages/contato.html">CONTATOS</a>
+        </nav>
+        
+
+        <main>
+            <h1>Sobre Darth Vader</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum delectus dolore, voluptate itaque perferendis odio doloribus! A quos alias ipsa eum id eos dolorem aliquam pariatur? Delectus voluptatibus sit laborum.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia distinctio labore aliquam est consequatur itaque ipsam ratione similique rem! Enim, molestiae maxime molestias et voluptatum quo vitae. In, magni perferendis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda perferendis non inventore excepturi cumque, quasi, explicabo esse possimus, nemo libero unde accusamus rem debitis asperiores enim in tempora dolorem fugiat.</p>
+        </main>
+
+        <footer>
+            <p>Todos direitos reservados</p>
+        </footer>
+
+
+    </div>
 </body>
 </html>
