--- a/pages/bio.html
+++ b/pages/bio.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biografia Darth Veider</title>
+    <title>Darth Veider</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="./imagens/capa.jpg" alt="">
+            <img src="../imagens/capa.jpg" alt="">
         </header>
 
         <nav class="nav">
@@ -22,10 +22,9 @@
         
 
         <main>
-            <h1>Sobre Darth Vader</h1>
+            <h1>BIOGRAFIA Darth Vader</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum delectus dolore, voluptate itaque perferendis odio doloribus! A quos alias ipsa eum id eos dolorem aliquam pariatur? Delectus voluptatibus sit laborum.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia distinctio labore aliquam est consequatur itaque ipsam ratione similique rem! Enim, molestiae maxime molestias et voluptatum quo vitae. In, magni perferendis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda perferendis non inventore excepturi cumque, quasi, explicabo esse possimus, nemo libero unde accusamus rem debitis asperiores enim in tempora dolorem fugiat.</p>
+            <img src="../imagens/foto1.jpg" alt="">
         </main>
 
         <footer>
